[workspace]
resolver = "2"
members = [
    "crates/net",
    "crates/html",
    "crates/css",
    "crates/dom",
    "crates/js",
    "crates/lumen",
    "crates/test262-runner",
    "crates/style",
    "crates/layout",
    "crates/paint",
    "crates/wurl",
    "crates/engine",
    "crates/ffi",
    "crates/webdriver",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.80"

# Lints shared by every crate (each crate opts in with `[lints] workspace = true`). We allow two
# lints that fight the nature of an engine: deeply nested callback / `dyn Fn` types (the host
# fetcher, etc.) and the pipeline functions that legitimately take many parameters. Everything
# else stays denied in CI (`cargo clippy -- -D warnings`).
[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
# Noisy/low-value for this codebase: doc-comment list continuation style, and explicit index loops
# (clearer than iterators for the 2D grid math).
doc_lazy_continuation = "allow"
needless_range_loop = "allow"

# Optimize the release build of the engine; debug stays fast to compile.
[profile.release]
opt-level = 3
lto = "thin"

# Patch ureq to accept obs-text (0x80–0xFF) header-value bytes, which RFC 7230 §3.2.6 allows but
# upstream 2.12.1 drops — without this a Set-Cookie response header carrying UTF-8 (e.g. a BOM) is
# silently discarded. The vendored copy is byte-identical to crates.io 2.12.1 except that one rule.
[patch.crates-io]
ureq = { path = "vendor/ureq" }
