[package]
name = "js"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The V8 JavaScript engine (Google's production engine). Walled off behind our own Runtime API
# so it can be replaced later — same pattern as net/ureq and paint/fontdue. Nothing outside this
# crate knows V8 exists. V8 gives us full JS speed + complete language support, including real
# ES modules and dynamic import.
v8 = "150"
# The real DOM, so page scripts can read and mutate the live document tree.
dom = { path = "../dom" }
# The cascade + CSS parser, so `getComputedStyle` can compute real values in-Session (the JS runs
# on its own thread while the engine is blocked, so we cannot call back into the engine; we run the
# cascade here instead). `style` depends only on `css` + `dom` — no cycle back through `js`.
style = { path = "../style" }
css = { path = "../css" }
# HTML parsing, so the `innerHTML` setter can build real child nodes from markup.
html = { path = "../html" }
# URL parsing/joining, so dynamic `import()` can resolve relative specifiers against the
# importing module's canonical URL and fetch modules not in the pre-fetched static graph.
url = "2"

[lints]
workspace = true
