[package]
name = "net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# `cookies` so the shared agent persists Set-Cookie across requests AND redirects (stay logged in).
ureq = { version = "2", features = ["cookies"] }
cookie_store = "0.21"
# Pure-Rust WebSocket client (handles ws:// and wss://). rustls TLS to match ureq's backend
# (rustls 0.23) so we don't pull a second TLS stack. `webpki-roots` ships Mozilla's root store so
# wss:// works without depending on the OS trust store.
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
url = "2.5"

[lints]
workspace = true
