[package]
name = "net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ureq = "2"
# Same rustls (0.23) / webpki-roots backend ureq uses, so adding the WPT test CA to the trust store
# (gated behind `WPT_CA_FILE`, used only by wpt-runner) doesn't pull a second TLS stack. `ring` is
# pinned so a process-default CryptoProvider always exists and building a ClientConfig can't panic.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
# Pure-Rust WebSocket client (handles ws:// and wss://). rustls TLS to match ureq's backend
# (rustls 0.23) so we don't pull a second TLS stack. `webpki-roots` ships Mozilla's root store so
# wss:// works without depending on the OS trust store.
tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
wurl = { path = "../wurl" }

[lints]
workspace = true
